Disable ClassLength cop.

--- a/config/rubocop_enabled.yml
+++ b/config/rubocop_enabled.yml
@@ -754,7 +754,7 @@ Metrics/BlockNesting:
 
 Metrics/ClassLength:
   Description: 'Avoid classes longer than 100 lines of code.'
-  Enabled: true
+  Enabled: false
 
 Metrics/CyclomaticComplexity:
   Description: >-
