Disable Style/AsciiComments.

--- a/config/rubocop_enabled.yml
+++ b/config/rubocop_enabled.yml
@@ -47,7 +47,7 @@ Style/ArrayJoin:
 Style/AsciiComments:
   Description: 'Use only ascii symbols in comments.'
   StyleGuide: 'https://github.com/bbatsov/ruby-style-guide#english-comments'
-  Enabled: true
+  Enabled: false
 
 Style/AsciiIdentifiers:
   Description: 'Use only ascii symbols in identifiers.'
