--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -368,6 +368,9 @@ Style/LambdaCall:
     - call
     - braces
 
+Style/ModuleFunction:
+  Enabled: false
+
 Style/Next:
   # With `always` all conditions at the end of an iteration needs to be
   # replaced by next - with `skip_modifier_ifs` the modifier if like this one
