Try once again to configure CodeClimate. This is getting boring.

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -5,6 +5,6 @@ ratings:
   paths:
     - lib/**
 exclude_paths:
-  - examples/**/*
-  - test/**/*
-  - vendor/**/*
+- "examples/**/*"
+- "test/**/*"
+- "vendor/**/*"
