Relax Style/SpaceAroundOperators in Rubocop; I like to format code to make it more readable for me. I hope you don't mind.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -93,6 +93,9 @@ Style/Next:
     - skip_modifier_ifs
     - always
 
+Style/SpaceAroundOperators:
+  Enabled: false
+
 Style/SpaceAroundEqualsInParameterDefault:
   EnforcedStyle: space
 
