Seriously, how difficult is it to have CodeClimate ignore a directory.

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -2,6 +2,6 @@ ratings:
   paths:
     - lib/**
 exclude_paths:
-  - "examples/**/*"
-  - "test/**/*"
-  - "vendor/**/*"
+  - "examples/*"
+  - "test/*"
+  - "vendor/*"
