Ignore benchmarks/ directory.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -21,6 +21,7 @@ AllCops:
     - '**/Cheffile'
     - '**/Vagabondfile'
   Exclude:
+    - 'benchmarks/**/*'
     - 'examples/**/*'
     - 'test/**/*'
     - 'vendor/**/*'
