Disable 'Style/MultilineOperationIndentation' in Rubocop.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -79,6 +79,9 @@ Style/IndentHash:
     - special_inside_parentheses
     - consistent
 
+Style/MultilineOperationIndentation:
+  Enabled: false
+
 Style/ModuleFunction:
   Enabled: false
 
