Disable Style/RescueModifier in Rubocop.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -97,6 +97,9 @@ Style/Next:
     - skip_modifier_ifs
     - always
 
+Style/RescueModifier:
+  Enabled: false
+
 Style/SpaceAroundOperators:
   Enabled: false
 
