--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,9 +1,7 @@
 inherit_from:
   - config/rubocop_enabled.yml
 
-# Common configuration.
 AllCops:
-  # Include gemspec and Rakefile
   Include:
     - '**/*.gemspec'
     - '**/*.podspec'
@@ -25,20 +23,9 @@ AllCops:
     - 'examples/**/*'
     - 'test/**/*'
     - 'vendor/**/*'
-  # By default, the rails cops are not run. Override in project or home
-  # directory .rubocop.yml files, or by giving the -R/--rails option.
   RunRailsCops: false
-  # Cop names are not displayed in offense messages by default. Change behavior
-  # by overriding DisplayCopNames, or by giving the -D/--display-cop-names
-  # option.
   DisplayCopNames: true
-  # Style guide URLs are not displayed in offense messages by default. Change
-  # behavior by overriding DisplayStyleGuide, or by giving the
-  # -S/--display-style-guide option.
   DisplayStyleGuide: true
-  # Additional cops that do not reference a style guide rule may be enabled by
-  # default. Change behavior by overriding StyleGuideCopsOnly, or by giving
-  # the --only-guide-cops option.
   StyleGuideCopsOnly: false
 
 Style/EmptyLinesAroundBlockBody:
@@ -50,34 +37,23 @@ Style/EmptyLinesAroundClassBody:
 Style/EmptyLinesAroundModuleBody:
   EnforcedStyle: empty_lines
 
-# Built-in global variables are allowed by default.
-Style/GlobalVars:
-  AllowedVariables: [$LIB_DIR]
+# Style/GlobalVars:
+#   AllowedVariables: [$LIB_DIR]
 
-# `MinBodyLength` defines the number of lines of the a body of an if / unless
-# needs to have to trigger this cop
-Style/GuardClause:
-  MinBodyLength: 1
+# Style/GuardClause:
+#   MinBodyLength: 1
 
-Style/IfUnlessModifier:
-  MaxLineLength: 80
+# Style/IfUnlessModifier:
+#   MaxLineLength: 80
 
-Style/IndentationWidth:
-  Width: 2
+# Style/IndentationWidth:
+#   Width: 2
 
-# Checks the indentation of the first key in a hash literal.
-Style/IndentHash:
-  # The value `special_inside_parentheses` means that hash literals with braces
-  # that have their opening brace on the same line as a surrounding opening
-  # round parenthesis, shall have their first key indented relative to the
-  # first position inside the parenthesis.
-  # The value `consistent` means that the indentation of the first key shall
-  # always be relative to the first position of the line where the opening
-  # brace is.
-  EnforcedStyle: special_inside_parentheses
-  SupportedStyles:
-    - special_inside_parentheses
-    - consistent
+# Style/IndentHash:
+#   EnforcedStyle: special_inside_parentheses
+#   SupportedStyles:
+#     - special_inside_parentheses
+#     - consistent
 
 Style/MultilineOperationIndentation:
   Enabled: false
@@ -85,17 +61,12 @@ Style/MultilineOperationIndentation:
 Style/ModuleFunction:
   Enabled: false
 
-Style/Next:
-  # With `always` all conditions at the end of an iteration needs to be
-  # replaced by next - with `skip_modifier_ifs` the modifier if like this one
-  # are ignored: [1, 2].each { |a| return 'yes' if a == 1 }
-  EnforcedStyle: skip_modifier_ifs
-  # `MinBodyLength` defines the number of lines of the a body of an if / unless
-  # needs to have to trigger this cop
-  MinBodyLength: 3
-  SupportedStyles:
-    - skip_modifier_ifs
-    - always
+# Style/Next:
+#   EnforcedStyle: skip_modifier_ifs
+#   MinBodyLength: 3
+#   SupportedStyles:
+#     - skip_modifier_ifs
+#     - always
 
 Style/RescueModifier:
   Enabled: false
@@ -103,17 +74,17 @@ Style/RescueModifier:
 Style/SpaceAroundOperators:
   Enabled: false
 
-Style/SpaceAroundEqualsInParameterDefault:
-  EnforcedStyle: space
+# Style/SpaceAroundEqualsInParameterDefault:
+#   EnforcedStyle: space
 
-Style/SpaceBeforeBlockBraces:
-  EnforcedStyle: space
+# Style/SpaceBeforeBlockBraces:
+#   EnforcedStyle: space
 
-Style/SpaceInsideBlockBraces:
-  EnforcedStyle: space
+# Style/SpaceInsideBlockBraces:
+#   EnforcedStyle: space
 
-Style/SpaceInsideHashLiteralBraces:
-  EnforcedStyle: space
+# Style/SpaceInsideHashLiteralBraces:
+#   EnforcedStyle: space
 
 Style/TrailingBlankLines:
   EnforcedStyle: final_newline
@@ -122,19 +93,16 @@ Style/TrailingComma:
   EnforcedStyleForMultiline: comma
 
 Metrics/AbcSize:
-  # The ABC size is a calculated magnitude, so this number can be a Fixnum or
-  # a Float.
   Max: 25
 
-Metrics/BlockNesting:
-  Max: 3
+# Metrics/BlockNesting:
+#   Max: 3
 
-# Avoid complex methods.
 Metrics/CyclomaticComplexity:
   Max: 12
 
 Metrics/MethodLength:
-  CountComments: false  # count full line comments?
+  CountComments: false
   Max: 30
 
 Metrics/PerceivedComplexity:
