Disable Lint/UnusedMethodArgument Rubocop warning;
Personally, I think this lint check, particularly where blocks are concerned is
misleading. I think that including the &block as an argument on a method is
more informative and useful to other developers over any performance gain from
not having it there.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -28,6 +28,9 @@ AllCops:
   DisplayStyleGuide: true
   StyleGuideCopsOnly: false
 
+Lint/UnusedMethodArgument:
+  Enabled: false
+
 Style/EmptyLinesAroundBlockBody:
   EnforcedStyle: no_empty_lines
 
