Tweak Rubocop settings to allow modules upto 200 lines.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -108,5 +108,8 @@ Metrics/MethodLength:
   CountComments: false
   Max: 30
 
+Metrics/ModuleLength:
+  Max: 200
+
 Metrics/PerceivedComplexity:
   Max: 10
