Ignore integrations/ directory.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -21,6 +21,7 @@ AllCops:
   Exclude:
     - 'benchmarks/**/*'
     - 'examples/**/*'
+    - 'integrations/**/*'
     - 'test/**/*'
     - 'vendor/**/*'
   RunRailsCops: false
