Update Rubocop to 0.36.0;
At the moment, this is raising a lot of style violations for using
'alias_method' inside modules as opposed to 'alias'. The link which
Rubocop points to says to use 'alias_method' which is conflicting
with the cop at runtime.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -24,7 +24,6 @@ AllCops:
     - 'integrations/**/*'
     - 'test/**/*'
     - 'vendor/**/*'
-  RunRailsCops: false
   DisplayCopNames: true
   DisplayStyleGuide: true
   StyleGuideCopsOnly: false
@@ -93,7 +92,7 @@ Style/SpaceAroundOperators:
 Style/TrailingBlankLines:
   EnforcedStyle: final_newline
 
-Style/TrailingComma:
+Style/TrailingCommaInLiteral:
   EnforcedStyleForMultiline: comma
 
 Metrics/AbcSize:
