--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -27,6 +27,7 @@ AllCops:
   DisplayCopNames: true
   DisplayStyleGuide: true
   StyleGuideCopsOnly: false
+  TargetRubyVersion: 2.3
 
 Lint/UnusedMethodArgument:
   Enabled: false
