Disable Rubocop 'Style/ExtraSpacing' cop;
I like to format my code to be readable and I think this cop does not suit my personal style.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -41,6 +41,9 @@ Style/EmptyLinesAroundClassBody:
 Style/EmptyLinesAroundModuleBody:
   EnforcedStyle: empty_lines
 
+Style/ExtraSpacing:
+  Enabled: false
+
 # Style/GlobalVars:
 #   AllowedVariables: [$LIB_DIR]
 
